# projects

12592440 - A2/: CMakeLists.txt  index.dox  laser.cpp  laser.h  main.cpp  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerInterface.cpp  rangerfusion.cpp  rangerfusion.h  rangerfusioninterface.cpp  rangerfusioninterface.h  rangerinterface.h
Assignment1/: CMakeLists.txt  main.cpp  sensor.cpp  sensor.h
a3-skeleton/: CMakeLists.txt  dataSynch.cpp  dataSynch.h  main.cpp  navigate.cpp  navigate.h  sample  seek.cpp  seek.h
a3-skeleton/lib/: simulator.h
pfms-2019a-Johnson15177-master/: GIT_HELP.md
pfms-2019a-Johnson15177-master/peer_reviews/pr1/: README.md
pfms-2019a-Johnson15177-master/peer_reviews/pr2/: README.md
pfms-2019a-Johnson15177-master/peer_reviews/pr3/: README.md
pfms-2019a-Johnson15177-master/quizzes/: README.md
pfms-2019a-Johnson15177-master/quizzes/quiz0/: ACK.txt  README.md
pfms-2019a-Johnson15177-master/quizzes/quiz1/: ACK.txt  README.md
pfms-2019a-Johnson15177-master/quizzes/quiz1/b/: CMakeLists.txt  main.cpp  rectangle.cpp  shape.cpp  shape.h
pfms-2019a-Johnson15177-master/quizzes/quiz2/: ACK.txt
pfms-2019a-Johnson15177-master/quizzes/quiz3/: ACK.txt  README.md
pfms-2019a-Johnson15177-master/quizzes/quiz4/: ACK.txt
pfms-2019a-Johnson15177-master/quizzes/quiz5/: ACK.txt  README.md
pfms-2019a-Johnson15177-master/quizzes/quiz6/: ACK.txt  README.md
pfms-2019a-Johnson15177-master/quizzes/review0/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review1/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review2/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review2/b/: CMakeLists.txt  car.h  main.cpp
pfms-2019a-Johnson15177-master/quizzes/review3/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review4/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review5/: MARKS.md  README.md
pfms-2019a-Johnson15177-master/quizzes/review5/b/: CMakeLists.txt  complex.cpp  test_complex.cpp
pfms-2019a-Johnson15177-master/quizzes/review6/: README.md
pfms-2019a-Johnson15177-master/quizzes/sol6/: README.md
pfms-2019a-Johnson15177-master/scratch/assignment/: notes
pfms-2019a-Johnson15177-master/scratch/assignment/a2/: CMakeLists.txt  laser.cpp  laser.h  main.cpp  numgenerator.cpp  numgenerator.h  radar.cpp  radar.h  ranger.cpp  ranger.h  rangerinterface.h
pfms-2019a-Johnson15177-master/scratch/assignment/a3/attempt/: CMakeLists.txt  control.cpp  control.h  index.dox  main.cpp
pfms-2019a-Johnson15177-master/scratch/assignment/assignment5/: CMakeLists.txt  package.xml
pfms-2019a-Johnson15177-master/scratch/assignment/assignment5/src/: frontier.cpp  frontier.h  main.cpp  processing.cpp  processing.h  requestGoal.cpp
pfms-2019a-Johnson15177-master/scratch/assignment/assignment5/test/: utest.cpp
pfms-2019a-Johnson15177-master/scratch/pre-work/week2/: CMakeLists.txt  rectangle.cpp  rectangle.h  rectangle_main.cpp
pfms-2019a-Johnson15177-master/scratch/tutorial/week08/starter/unit_testing/ex01/: CMakeLists.txt
pfms-2019a-Johnson15177-master/scratch/tutorial/week08/starter/unit_testing/ex01/test/: test_project1.cpp
pfms-2019a-Johnson15177-master/scratch/tutorial/week08/starter/unit_testing/ex02/: CMakeLists.txt  laser.h  main.cpp
pfms-2019a-Johnson15177-master/skeleton/a2-skeleton/: CMakeLists.txt  laser.h  radar.h  ranger.h  rangerfusion.h  rangerfusioninterface.h  rangerinterface.h
pfms-2019a-Johnson15177-master/skeleton/a3-skeleton/: CMakeLists.txt  main.cpp
pfms-2019a-Johnson15177-master/skeleton/a3-skeleton-doc/: classSimulator-members.html  functions.html  functions_func.html  functions_vars.html  simulator_8cpp.html  simulator_8h__dep__incl.map  simulator_8h__dep__incl.md5  simulator_8h_source.html  structAircraft-members.html  structAircraft.html  structAircraftContainer.html  structAircraftContainer__coll__graph.md5  structGlobalOrd-members.html  structPose-members.html  structPose.html  structRangeStamped.html  timer_8cpp.html  timer_8h__incl.md5  timer_8h_source.html  types_8h__dep__incl.map  types_8h__incl.md5  types_8h_source.html
pfms-2019a-Johnson15177-master/skeleton/a5_support/a5_setup/: CMakeLists.txt  package.xml
pfms-2019a-Johnson15177-master/skeleton/a5_support/a5_setup/launch/: a5_map.launch  a5_map_fake.launch  a5_setup.launch
pfms-2019a-Johnson15177-master/skeleton/a5_support/a5_setup/src/: map_to_image_node.cpp
pfms-2019a-Johnson15177-master/skeleton/a5_support/a5_setup/srv/: RequestGoal.srv
pfms-2019a-Johnson15177-master/skeleton/a5_support/a5_setup/worlds/: uoa_robotics_lab.world  uoa_robotics_lab.world~
pfms-2019a-Johnson15177-master/tutorials/: README.md
pfms-2019a-Johnson15177-master/tutorials/week01/: PREWORK.md  README.md  TUTORIAL.md
pfms-2019a-Johnson15177-master/tutorials/week02/: TUTORIAL.md
pfms-2019a-Johnson15177-master/tutorials/week03/: README.md  TUTORIAL.md
pfms-2019a-Johnson15177-master/tutorials/week04/: README.md  TUTORIAL.md
pfms-2019a-Johnson15177-master/tutorials/week04/starter/shape_lib/: CMakeLists.txt
pfms-2019a-Johnson15177-master/tutorials/week05/starter/vector_iterator/: CMakeLists.txt  sum_doubles.cpp
quiz1/: ACK.txt  README.md
quiz1/a/: CMakeLists.txt  main.cpp  person.cpp  person.h
quiz1/b/: main.cpp  rectangle.h  shape.h
quiz2/: ACK.txt  MARKS.md  README.md
quiz2/a/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
quiz2/b/: car.cpp  car.h  controllerinterface.h  main.cpp
quiz3/: ACK.txt  README.md
quiz3/a/: car.cpp  car.h  main.cpp  motorbike.cpp  motorbike.h  vehicle.cpp  vehicle.h
quiz3/b/: CMakeLists.txt  deque_vector_ops.cpp
quiz3/c/: data_race.cpp
quiz4/: MARKS.md  README.md
quiz4/a/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
quiz4/b/: CMakeLists.txt  main.cpp
quiz5/: .README.md.swp  README.md
quiz5/a/: fibonacci.cpp  generator.cpp  printer.cpp
quiz5/b/: complex.cpp  test_complex.cpp
quiz6/: MARKS.md
quiz6/a/: CMakeLists.txt
quiz6/a/src/: main.cpp  sample.cpp  sample.h
quiz6/b/: package.xml
(+373 files in other folders)
